--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,14 @@
     "name": "2023 Legjobb projektje",
     "icons": [
       {
-        "src": "/public/favicon.png",
+        "src": "/public/icon.png",
         "type": "image/png",
-        "sizes": "128x128"
+        "sizes": "512x512"
+      },
+      {
+        "src": "/public/iconbig.png",
+        "type": "image/png",
+        "sizes": "1024x1024"
       }
     ],
     "id": "/?source=pwa",
