--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,12 @@
         "src": "/iconbig.png",
         "type": "image/png",
         "sizes": "1024x1024"
+      },
+      {
+        "src": "/maskable_icon.png",
+        "type": "image/png",
+        "sizes": "512x512",
+        "purpose": "any maskable"
       }
     ],
     "id": "/?source=pwa",
