--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "short_name": "Ampix Projekt",
+    "short_name": "2023 Projekt",
     "name": "2023 Legjobb projektje",
     "icons": [
       {
